--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: 'GitHub Action for COVID-19 Updates'
 description: 'Get Covid-19 Update by country. Data from 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE.'
+branding:
+  color: 'blue'
+  icon: 'alert-circle'
 inputs:
   who-to-greet:  # id of input
     description: 'Yesterday date'
