--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@actions/core": "^1.2.3",
     "dotenv": "^8.2.0",
+    "mysql": "^2.18.1",
     "node-telegram-bot-api": "^0.40.0",
     "request": "^2.88.2",
     "scramjet": "^4.29.0"
