--- a/.github/workflows/send-message.yml
+++ b/.github/workflows/send-message.yml
@@ -15,7 +15,7 @@ jobs:
       - name: 'Install NPM dependencies'
         run: npm install
       - name: 'Run code'
-        run: node index.js
+        run: npm start
         env:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
